--- a/tp12.LabI/nbproject/project.properties
+++ b/tp12.LabI/nbproject/project.properties
@@ -34,12 +34,14 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/construirSA
 excludes=
 file.reference.mariadb-java-client-3.1.4.jar=C:\\Users\\NoxiePC\\Desktop\\CANDE\\Proyectos Cande\\Laboratorio I\\.JAR\\mariadb-java-client-3.1.4.jar
+file.reference.mariadb-java-client-3.1.4.jar-1=C:\\Users\\54261\\OneDrive\\Escritorio\\2do cuatri PROGRAMACION\\lab 1\\mariadb-java-client-3.1.4.jar
 file.reference.mysql-connector-java-5.1.46-bin.jar=C:\\Users\\NoxiePC\\Desktop\\CANDE\\Proyectos Cande\\Laboratorio I\\.JAR\\mysql-connector-java-5.1.46-bin.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-java-5.1.46-bin.jar}:\
-    ${file.reference.mariadb-java-client-3.1.4.jar}
+    ${file.reference.mariadb-java-client-3.1.4.jar}:\
+    ${file.reference.mariadb-java-client-3.1.4.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
